[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://textures/protagonist/protagonist.png" type="Texture" id=2]
[ext_resource path="res://scenes/player/RunAnim.tres" type="SpriteFrames" id=3]
[ext_resource path="res://scenes/player/FallAnim.tres" type="SpriteFrames" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 9, 16 )

[node name="Protagonist" type="KinematicBody2D" groups=[
"Players",
]]

transform/pos = Vector2( 108, 128 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -3, 16 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="IdleSprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -3, 16 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="RunAnim" type="AnimatedSprite" parent="."]

visibility/visible = false
frames = ExtResource( 3 )
animation = "default"

[node name="FallAnim" type="AnimatedSprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 0, 12 )
frames = ExtResource( 4 )
animation = "default"


